# cppbackend

./: .gitignore
.github/workflows/: main.yml
hello/: CMakeLists.txt  conanfile.txt
hello/src/: main.cpp
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h  main.cpp
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/src/: json_converter.cpp  responce_storage.cpp
sprint1/problems/map_json/solution/src/: http_server.cpp  json_loader.cpp
sprint1/problems/sum/precode/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  run_server
sprint2/problems/command_line/solution/src/model/: road.cpp  roadmap.cpp  roadmap.h
sprint2/problems/command_line/solution/src/request_handlers/: request_handler.h
sprint2/problems/command_line/solution/src/server/: http_server.cpp
sprint2/problems/final_task/solution/: run_server
sprint2/problems/final_task/solution/src/: main.cpp
sprint2/problems/final_task/solution/src/model/: map.cpp
sprint2/problems/final_task/solution/src/request_handlers/: request_handler.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  conanfile.txt  run_server
